gcloud/proxy-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: proxy
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: cordcut-me
        tier: proxy
    spec:
      containers:
      - name: proxy
        image: gcr.io/cordcut-me/proxy:latest
        ports:
        - containerPort: 80
