gcloud/ui-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ui
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: cordcut-me
        tier: ui
    spec:
      containers:
      - name: ui
        image: gcr.io/cordcut-me/ui:latest
        ports:
        - containerPort: 8081
