gcloud/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  labels:
    app: cordcut-me
    tier: api
spec:
  type: NodePort
  ports:
  - port: 3000
  selector:
    app: cordcut-me
    tier: api
