gcloud/proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: proxy
  labels:
    app: cordcut-me
    tier: proxy
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: cordcut-me
    tier: proxy
