gcloud/ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui
  labels:
    app: cordcut-me
    tier: ui
spec:
  type: NodePort
  ports:
  - port: 8080
  selector:
    app: cordcut-me
    tier: ui
