gcloud/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: fanout-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: cordcut-me-static-ip
spec:
  tls:
    - secretName: sslsecret
  rules:
  - http:
      paths:
      - path: /api/*
        backend:
          serviceName: api
          servicePort: 3000
      - path: /*
        backend:
          serviceName: ui
          servicePort: 8080
